# Rocket-Landing-Simulation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: FuelProperties.hpp  constants.h  constants.hpp  genetic_algorithm.hpp  numeric_solver.hpp  rocket.hpp  rocket_booster.hpp
scr/: rocket.cpp
